fix Home and ScoreCard overflow

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -3,7 +3,8 @@
 }
 
 .home {
-  margin-top: 2%;
+  overflow: auto;
+  height: 75vh;
 }
 
 .logo {
